ESNOOK-12 Changed icon to match the product

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,27 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="592"
+    android:viewportHeight="396">
+  <group android:scaleX="0.45"
+      android:scaleY="0.3010135"
+      android:translateX="162.8"
+      android:translateY="138.39932">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M150,395.08C226.03,319.05 300,240.27 300,160.84C300,81.4 232.84,17 150,17C67.16,17 0,81.4 0,160.84C0,240.27 100.68,345.77 150,395.08ZM152.05,226.59C188.37,226.59 217.81,196.23 217.81,158.78C217.81,121.33 188.37,90.97 152.05,90.97C115.74,90.97 86.3,121.33 86.3,158.78C86.3,196.23 115.74,226.59 152.05,226.59Z"
+        android:fillColor="#1E1E1E"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M400,395.08C476.03,319.05 550,240.27 550,160.84C550,81.4 482.84,17 400,17C317.16,17 250,81.4 250,160.84C250,240.27 350.68,345.77 400,395.08ZM402.05,226.59C438.37,226.59 467.81,196.23 467.81,158.78C467.81,121.33 438.37,90.97 402.05,90.97C365.74,90.97 336.3,121.33 336.3,158.78C336.3,196.23 365.74,226.59 402.05,226.59Z"
+        android:fillColor="#1E1E1E"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M192,378.08C268.03,302.05 342,223.27 342,143.84C342,64.4 274.84,0 192,0C109.16,0 42,64.4 42,143.84C42,223.27 142.68,328.77 192,378.08ZM194.05,209.59C230.37,209.59 259.81,179.23 259.81,141.78C259.81,104.33 230.37,73.97 194.05,73.97C157.74,73.97 128.3,104.33 128.3,141.78C128.3,179.23 157.74,209.59 194.05,209.59Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+    <path
+        android:pathData="M442,378.08C518.03,302.05 592,223.27 592,143.84C592,64.4 524.84,0 442,0C359.16,0 292,64.4 292,143.84C292,223.27 392.68,328.77 442,378.08ZM444.05,209.59C480.37,209.59 509.81,179.23 509.81,141.78C509.81,104.33 480.37,73.97 444.05,73.97C407.74,73.97 378.3,104.33 378.3,141.78C378.3,179.23 407.74,209.59 444.05,209.59Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
